--- a/generateur.html
+++ b/generateur.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Créations Dupdup - Générateur de cartes Dobble</title>
+  <title>Générateur de cartes Dobble</title>
   <link rel="stylesheet" href="styles/global.css">
   <script type="module" src="scripts/app.js"></script>
 </head>
@@ -18,7 +18,6 @@
   </nav>
 
   <header>
-    <img src="isla_200x200.74417624_o08o07y0.jpg" alt="Logo Créations Dupdup" class="logo">
     <h1>Générateur de cartes personnalisées</h1>
     <div class="wave"></div>
   </header>
