--- a/emoji-customization.html
+++ b/emoji-customization.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Créations Dupdup</p>
+        <p>&copy; 2025</p>
     </footer>
 </body>
 </html>
