--- a/generateur.html
+++ b/generateur.html
@@ -26,7 +26,7 @@
    <div class="actions">
   <button id="generateCardsBtn">Générer des cartes</button>
   <button id="downloadPDFBtn">Télécharger en PDF</button>
-  <button id="downloadPDFBtn">Télécharger en ZIP</button>
+  <button id="exportCardsAsZip">Télécharger en ZIP</button>
 </div>
 
 
