--- a/generateur.html
+++ b/generateur.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Générateur de cartes Dobble</title>
   <link rel="stylesheet" href="styles/global.css">
-  <script type="module" src="scripts/app.js"></script>
+  <script type="module" src="scripts/app.js"></script> 
+  <script type="module" src="scripts/dobble.js"></script>
 </head>
 <body>
   <nav class="hamburger-menu">
