--- a/emoji-customization.html
+++ b/emoji-customization.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/emoji-customization.css">
     <script type="module" src="scripts/app.js"></script>
+    <script type="module" src="scripts/dobble.js"></script>
 </head>
 <body>
 
